test/phase2/1.c.out
../../../../llvm/install/bin/opt: <stdin>:1:1: error: expected top-level entity
void test() {
^
